

syntax = "proto3";

package auth.v1alpha;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc ValidateToken(Token) returns (TokenValidationResponse) {};
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (RegisterRequest) returns (RegisterResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
}

message RegisterRequest {
  string name = 1;
  string password = 2;
  string email = 3;
}

message User {
  int32 id = 4;
  string name = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string name = 1;
  string email = 2;
}

message GetRequest {
  string name = 1;
  int32 id = 2;
}

message GetResponse {
  repeated User users = 1;
}

message UpdateRequest {
  int32 id = 2;
  User user = 1;
}

message UpdateResponse {
  bool success = 1;
  string message = 2;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message Token {
  string accessToken = 1;
}

message TokenValidationResponse {
  bool isValid = 1;
}
